--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ LazyData: true
 Depends: 
     R (>= 2.10)
 RoxygenNote: 7.3.1
+URL: https://github.com/11arc4/CCMEGuidelinesTools
+BugReports: https://github.com/11arc4/CCMEGuidelinesTools/issues
